<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleERP</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_files">ListFilesActivity</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_drive">Drive</string>
    <string name="title_activity_criar_arquivo">CriarArquivo</string>
    <string name="lbl_insumo">Insumo</string>
    <string name="lbl_novo_insumo">Novo Insumo</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_quantidade">Quantidade</string>
    <string name="lbl_custo_unidade">Custo Unidade</string>
    <string name="lbl_cadastrar">Cadastrar</string>
    <string name="lbl_cadastro_insumo">Cadastro de Insumo</string>
    <string name="title_activity_insumos">InsumosActivity</string>
    <string name="descr_overflow_button">descr_overflow_button</string>
    <string name="texto_boasvindas">    Olá! Você já pode começar a otimizar sua empresa.  Adicione Insumos,
        Produtos e Produções clicando no botão: '+', abaixo.</string>
    <string name="todos_os_produtos">Todos os Produtos</string>
    <string name="todos_os_insumos">Todos os Insumos</string>
</resources>
